Documentation review :: issue 000262 (Preparing for release)